--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -958,9 +958,6 @@ div.tleft {
 img.thumbborder {
 	border: 1px solid #dddddd;
 }
-.hiddenStructure {
-	display: none;
-}
 /* Warning */
 .mw-warning {
 	margin-left: 50px;
